# bazel-project

./: BUILD.bazel  WORKSPACE
my-app/: angular.json  package-lock.json  package.json
src/: BUILD.bazel
